--- a/templates/home.html
+++ b/templates/home.html
@@ -1,55 +1,191 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-	<title>Home</title>
-	<!-- <link rel="stylesheet" type="text/css" href="../static/css/styles.css"> -->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
-     <link rel="stylesheet" href="styes.css">
-  <style>
-  div{
-  text-align:center
-  }
-    h2{
-      color:red
-    }
-    body{
-      background-color:pink
-    }
-    input{
-      background-color:yellow
-    }
-  </style>
+  <head>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+    <title>Home</title>
+    <!-- <link rel="stylesheet" type="text/css" href="../static/css/styles.css"> -->
+    <!-- <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='css/styles.css') }}"
+    /> -->
+
+    <style>
+      div {
+        text-align: center;
+      }
+      h1 {
+        text-shadow: 2px 2px #000000; 
+        font-family: "Trebuchet MS", sans-serif;
+        font-size: 4.5em;
+        letter-spacing: -2px;
+        border-bottom: 2px solid rgb(255, 255, 255);
+        text-transform: uppercase;
+        background-color: rgba(255, 255, 255, 0.1);
+        color: rgb(228, 228, 228);
+      }
+      body {
+        /* background-color: #dcd9cd; */
+        background-image: url("https://cdn.pixabay.com/photo/2016/02/01/00/56/news-1172463__480.jpg");
+        background-size: cover;
+      }
+      input {
+        background-color: yellow;
+      }
+      textarea {
+        border: 1px solid;
+        border-radius: 5px;
+        font-size: 26px;
+        padding-left: 10px;
+        text-shadow: 2px 2px #000000; 
+        opacity: 90%;
+      }
+      textarea::placeholder {
+        font-size: 26px;
+        padding-left: 10px;
+        opacity: 0.8;
+        text-shadow: none;
+      }
+      #footer {
+        position: fixed;
+        padding: 8px 10px 0px 10px;
+        bottom: 0;
+        width: 100%;
+        height: 50px;
+        font-size: 20px;
+        color: rgba(255, 255, 255, 0.836);
+        background: rgb(0, 0, 0);
+      }
+
+      .btn-info {
+        margin: 20px;
+        width: 130px;
+        height: 40px;
+        color: #fff;
+        border-radius: 5px;
+        padding: 10px 25px;
+        font-family: "Lato", sans-serif;
+        font-size: 22px;
+        background: transparent;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        position: relative;
+        display: inline-block;
+        background: rgb(0, 172, 238);
+        background: linear-gradient(
+          0deg,
+          rgba(0, 172, 238, 1) 0%,
+          rgba(2, 126, 251, 1) 100%
+        );
+        line-height:20px;
+        letter-spacing: 0.2px;
+      }
+      .btn-info span {
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+      .btn-info:before,
+      .btn-info:after {
+        position: absolute;
+        content: "";
+        right: 0;
+        top: 0;
+        background: rgba(2, 126, 251, 1);
+        transition: all 0.3s ease;
+      }
+      .btn-info:before {
+        height: 0%;
+        width: 2px;
+      }
+      .btn-info:after {
+        width: 0%;
+        height: 2px;
+      }
+      .btn-info:hover {
+        text-decoration: none;
+        color: #fff;
+        box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
+          7px 7px 20px 0px rgba(0, 0, 0, 0.1),
+          4px 4px 5px 0px rgba(0, 0, 0, 0.1);
+      }
+      .btn-info:hover:before {
+        height: 100%;
+      }
+      .btn-info:hover:after {
+        width: 100%;
+      }
+      .btn-info span:hover {
+        color: rgba(2, 126, 251, 1);
+      }
+      .btn-info span:before,
+      .btn-info span:after {
+        position: absolute;
+        content: "";
+        left: 0;
+        bottom: 0;
+        background: rgba(2, 126, 251, 1);
+        transition: all 0.3s ease;
+      }
+      .btn-info span:before {
+        width: 2px;
+        height: 0%;
+      }
+      .btn-info span:after {
+        width: 0%;
+        height: 2px;
+      }
+      .btn-info span:hover:before {
+        height: 100%;
+      }
+      .btn-info span:hover:after {
+        width: 100%;
+      }
+    </style>
   </head>
-<body>
-
-	<header>
-		<div class="container">
-		<div id="brandname">
+  <br>
+    <header>
+      <div class="container">
+        <h1><strong>NEWS ARTICLE SORTING USING DEEP NLP TECHNIQUES</strong></h1>
+        <!-- <div id="brandname">
           <strong>Machine Learning App with Flask</strong>
-		</div>
-          <em><h2>BBC News Article Categorization</h2></em>
-		
-	</div>
-	</header>
+        </div> -->
+      </div>
+    </header>
+  </br>
+</br>
 
-	<div class="ml-container">
+    <div class="ml-container">
+      <form action="{{ url_for('predict')}}" method="POST">
+        <textarea
+          name="message"
+          rows="10"
+          cols="105"
+          placeholder="Enter your article here to predict its category"
+        ></textarea>
+        <br />
 
-		<form action="{{ url_for('predict')}}" method="POST">
-		
-		
-		<textarea name="message" rows="16" cols="200" placeholder="enter your article here...."></textarea>
-		<br/>
-
-		<input type="submit" class="btn-info" value="predict">
-		
-	</form>
-		
-	</div>
-
-	
-	
-
-</body>
+       <input type="submit" class="btn-info" value="Predict" />
+      </form>
+    </div>
+    <div id="footer">
+      Major Project by M. Rhema Keren (18261A05F8) and M. Sai Dhanush
+      (18261A05F9)
+    </div>
+  </body>
+</html>
