--- a/templates/tech1.html
+++ b/templates/tech1.html
@@ -1,99 +1,257 @@
 <!--tech-->
 <!DOCTYPE html>
 <html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-	
+  <head>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <style>
+      body {
+        background-color: #dcd9cd;
+      }
+      h1 {
+        position: fixed;
+        padding: 10px 0px 0px 50px;
+        top: 0;
+        width: 100%;
+        height: 75px;
+        color: rgba(255, 255, 255, 0.836);
+        background: rgb(37, 37, 37);
+        justify-content: center;
+      }
+      .heading {
+        text-align: center;
+        display: flex;
+        font-family: "Montserrat", sans-serif;
+        font-size: 45px;
+        justify-content: center;
+        margin: 40px 10px 0px 10px;
+        text-shadow: 2px 2px #9b9b9b;
+      }
 
+      a {
+        text-decoration: none;
+      }
+
+      .btn-info {
+        margin: 20px;
+        width: 130px;
+        height: 40px;
+        color: #fff;
+        border-radius: 5px;
+        padding: 10px 25px;
+        font-family: "Lato", sans-serif;
+        font-size: 20px;
+        font-weight: 500;
+        background: transparent;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        position: relative;
+        display: inline-block;
+        outline: none;
+        background: rgb(0, 172, 238);
+        background: linear-gradient(
+          0deg,
+          rgba(0, 172, 238, 1) 0%,
+          rgba(2, 126, 251, 1) 100%
+        );
+        width: 130px;
+        height: 40px;
+        line-height: 42px;
+        padding: 0;
+        border: none;
+      }
+      .btn-info span {
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+      .btn-info:before,
+      .btn-info:after {
+        position: absolute;
+        content: "";
+        right: 0;
+        top: 0;
+        background: rgba(2, 126, 251, 1);
+        transition: all 0.3s ease;
+      }
+      .btn-info:before {
+        height: 0%;
+        width: 2px;
+      }
+      .btn-info:after {
+        width: 0%;
+        height: 2px;
+      }
+      .btn-info:hover {
+        text-decoration: none;
+        color: #fff;
+        box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
+          7px 7px 20px 0px rgba(0, 0, 0, 0.1),
+          4px 4px 5px 0px rgba(0, 0, 0, 0.1);
+      }
+      .btn-info:hover:before {
+        height: 100%;
+      }
+      .btn-info:hover:after {
+        width: 100%;
+      }
+      .btn-info span:hover {
+        color: rgba(2, 126, 251, 1);
+      }
+      .btn-info span:before,
+      .btn-info span:after {
+        position: absolute;
+        content: "";
+        left: 0;
+        bottom: 0;
+        background: rgba(2, 126, 251, 1);
+        transition: all 0.3s ease;
+      }
+      .btn-info span:before {
+        width: 2px;
+        height: 0%;
+      }
+      .btn-info span:after {
+        width: 0%;
+        height: 2px;
+      }
+      .btn-info span:hover:before {
+        height: 100%;
+      }
+      .btn-info span:hover:after {
+        width: 100%;
+      }
+
+      .row {
+        margin: 0px 40px 40px 40px;
+      }
+      .card {
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 10px 0px,
+          rgba(0, 0, 0, 0.5) 0px 2px 15px 0px;
+        margin: 0 auto;
+        display: grid;
+        max-width: 780px;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-auto-rows: 180px;
+        grid-gap: 20px;
+        padding-bottom: 70px;
+        border-radius: 10px;
+        background-image: url("news-img.jpg");
+        background-size: cover;
+      }
+
+      .card:hover {
+        filter: none;
+        transition: 0.3s ease-out;
+        transform: scale(1.06);
+      }
+
+      h4.card-title {
+        padding-top: 0px;
+        color: black;
+      }
+
+      .card-body {
+        margin-top: 30px;
+        border-top: 0px;
+        color: black;
+      }
+
+      #footer {
+        position: fixed;
+        padding: 8px 10px 0px 10px;
+        bottom: 0;
+        width: 100%;
+        height: 50px;
+        font-size: 20px;
+        color: rgba(255, 255, 255, 0.836);
+        background: rgb(37, 37, 37);
+        text-align: center;
+      }
+    </style>
   </head>
-<body style="background-color:cyan">
+  <body>
+    <center>
+      <h1>This article belongs to the Technology category</h1>
 
-<center><h1 style="color:red;background-color:pink"> This article belongs to technology category</h1>
-  
-  <br>
-  <br>
-  
-  <button style="font-size:30px" type="button" class="btn btn-outline-dark">Top 5 tech News</button>
-  <br>
-  <br>
-  <div class="container">
-<div class="row">
-<div class="col">
-  
-  <div style="border-color:red" class="card" style="width: 18rem;">
-  
-  <div class="card-body">
-    <h5 class="card-title">technology</h5>
-    <p class="card-text">{{ pre }}</p>
-    <a href="{{ r }}" class="btn btn-primary">read more</a>
-  </div>
-</div>
-  </div>
-  
-  <div class="col">
-    
-    <div style="border-color:red" class="card" style="width: 18rem;">
- 
-  <div class="card-body">
-    <h5 class="card-title">technology</h5>
-    <p class="card-text">{{ pre1 }}.</p>
-    <a href="{{ r1 }}" class="btn btn-primary">read more</a>
-  </div>
-</div>
-  </div>
-  
-  
-  
-  
-  
-  
-  <div class="col">
-  <div style="border-color:red" class="card" style="width: 18rem;">
-  
-  <div class="card-body">
-    <h5 class="card-title">technology</h5>
-    <p class="card-text">{{ pre2 }}</p>
-    <a href="{{ r2 }}" class="btn btn-primary">read more</a>
-  </div>
-</div>
-    </div>
-    </div>
-  <br>
-    <br>
-  <div class="row">
-  <div class="col">
-    <div style="border-color:red" class="card" style="width: 18rem;">
-  
-  <div class="card-body">
-    <h5 class="card-title">technology</h5>
-    <p class="card-text">{{ pre3 }}.</p>
-    <a href="{{ r3 }}" class="btn btn-primary">read more</a>
-  </div>
-</div>
-  </div>
-  
-    
-      <div class="col">
-      <div style="border-color:red" class="card" style="width: 18rem;">
-  
-  <div class="card-body">
-    <h5 class="card-title">technology</h5>
-    <p class="card-text">{{ pre4 }}</p>
-    <a href="{{ r4 }}" class="btn btn-primary">read more</a>
-  </div>
-</div>
-    </div>
-  </div>
-  </div>
- 
-  </center>
-  
-  
-  
-  
- 
+      <br />
+      <br />
 
-</body>
+      <div class="heading">Top 5 Technology News</div>
+      <br />
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Technology</h4>
+                <p class="card-text">{{ pre }}</p>
+                <a href="{{ r }}" class="btn-info">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Technology</h4>
+                <p class="card-text">{{ pre1 }}.</p>
+                <a href="{{ r1 }}" class="btn-info">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Technology</h4>
+                <p class="card-text">{{ pre2 }}</p>
+                <a href="{{ r2 }}" class="btn-info">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Technology</h4>
+                <p class="card-text">{{ pre3 }}.</p>
+                <a href="{{ r3 }}" class="btn-info">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Technology</h4>
+                <p class="card-text">{{ pre4 }}</p>
+                <a href="{{ r4 }}" class="btn-info">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </center>
+    <div id="footer">
+      Major Project by M. Rhema Keren (18261A05F8) and M. Sai Dhanush
+      (18261A05F9)
+    </div>
+  </body>
 </html>
